# bdhackathon

./: Dockerfile  README.md  build.sh  fly.toml  gitConfig  pyproject.toml  render.yaml  requirements.txt
config/: settings.py  urls.py
hackathon/: admin.py  models.py  serializers.py  views.py
hackathon/migrations/: 0001_initial.py  0002_alter_orcamentos_datasolicitada_orcamento_and_more.py  0002_funcionario.py  0002_relatorio_imagens_antes_relatorio_imagens_depois.py  0003_alter_orcamentos_datasolicitada_orcamento.py  0003_usuariodados_delete_funcionario.py  0004_usuario_delete_usuariodados.py  0005_cliente_estoque_ferramentaspecas_paralelismo_and_more.py
