[project]
name = "bdhackathon"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Gabriel", email = "gabrielviniciuscorrea204@gmail.com"},
    #{name = "", email = ""},
]
dependencies = [
    "django>=5.1.3",
    "djangorestframework>=3.15.2",
    "django-cors-headers>=4.5.0",
    "pillow>=11.0.0",
    "python-magic>=0.4.27; sys_platform == \"linux\"",
    "python-magic-bin>=0.4.14; sys_platform == \"win32, darwin\"",
    "drf-yasg>=1.21.8",
    "dj-database-url>=2.3.0",
    "netifaces>=0.11.0",
    "python-dotenv>=1.0.1",
    "whitenoise>=6.8.2",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "uvicorn>=0.32.1",
    "gunicorn>=23.0.0",
]
requires-python = "==3.10*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false


[tool.pdm.scripts]
pre_dev = "python ./scripts/set_my_ip.py"
dev = "python manage.py runserver 0.0.0.0:19003"
runserver = "python manage.py runserver"
createsuperuser = "python manage.py createsuperuser"
migrate = "python manage.py migrate"
makemigrations = "python manage.py makemigrations"
shell = "python manage.py shell"
test = "python manage.py test"
startapp = "python manage.py startapp {args}"
loaddata = "python manage.py loaddata {args}"
dumpdata = "python manage.py dumpdata {args}"
[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.13.2",
    "black>=24.10.0",
]

[tool.black]
line-length = 120

[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = "true"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.backend"



