[project]
name = "nome_do_projeto"
version = "0.1.0"
description = "Descrição do projeto"
authors = [
    { name="Seu Nome", email="seu.email@example.com" }
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.scripts]
pre_dev = "python ./scripts/set_my_ip.py"
dev = "python manage.py runserver 0.0.0.0:19003"
runserver = "python manage.py runserver"
createsuperuser = "python manage.py createsuperuser"
migrate = "python manage.py migrate"
makemigrations = "python manage.py makemigrations"
shell = "python manage.py shell"
test = "python manage.py test"
startapp = "python manage.py startapp {args}"
loaddata = "python manage.py loaddata {args}"
dumpdata = "python manage.py dumpdata {args}"

[project.dependencies]
django = "*"
gunicorn = "*"
uvicorn = {extras = ["standard"], version = "*"}
psycopg2-binary = "*"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.backend"